# datum-sync

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE.txt  README.md  pyproject.toml  requirements.txt
examples/: NGen_bmi_datum_sync.py  example_convert.ipynb  run_bmi_datum_sync.py
examples/data/: bmi_config.yaml  sample_data_1.csv  sample_data_2.csv  sample_output_1.csv  sample_output_2.csv
src/datum_sync/: __init__.py  datum_sync.py  exceptions.py
src/datum_sync/bmi/: __init__.py  bmi_base.py  bmi_datum_sync.py  config.py
tests/unit/: test_NGen_datum_sync.py  test_bmi.py  test_datum_sync.py
tests/unit/config/: config_base_xy.yaml  config_base_xyz.yaml
tools/: create_coastal_csv.py
