[project]
name = "datum-sync"
version = "0.1.0"
description = "A BMI-compliant tool to convert between vertical datum"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "Quercus Hamlin", email = "qhamlin@asrcfederal.com" }]
maintainers = [{ name = "Quercus Hamlin", email = "qhamlin@asrcfederal.com" }]
dependencies = ["bmipy==2.0.1", "pyproj==3.7.1", "pydantic==2.11.4"]

[project.optional-dependencies]
dev_examples = [
  "pre-commit>=3.8.0",
  "ipykernel>=6.29.5",
  "jupyterlab==4.4.2",
  "pytest>=8.3.2",
  "ruff==0.11.10",
  "black==25.1.0",
  "mypy==1.15.0",
  "types-PyYAML==6.0.12.20250516",
  "pandas==2.2.3",
]

tests = ["pytest==8.3.5", "pytest-cov==6.1.1"]

[tool.black]
line-length = 110
skip-string-normalization = true
preview = true
target-version = ['py311']

[tool.ruff]
line-length = 110
lint.select = [
  "F",      # Errors detected by Pyflakes
  "E",      # Error detected by Pycodestyle
  "W",      # Warning detected by Pycodestyle
  "I",      # isort
  "D",      # pydocstyle
  "B",      # flake8-bugbear
  "Q",      # flake8-quotes
  "TID",    # flake8-tidy-imports
  "C4",     # flake8-comprehensions
  "BLE",    # flake8-blind-except
  "UP",     # pyupgrade
  "RUF100", # Report unused noqa directives
]
lint.ignore = [
  # line too long -> we accept long comment lines; black gets rid of long code lines
  "E501",
  # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E731",
  # allow I, O, l as variable names -> I is the identity matrix
  "E741",
  # Missing docstring in public package
  "D104",
  # Missing docstring in public module
  "D100",
  # Missing docstring in __init__
  "D107",
  # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "B008",
  # __magic__ methods are are often self-explanatory, allow missing docstrings
  "D105",
  # first line should end with a period [Bug: doesn't work with single-line docstrings]
  "D400",
  # First line should be in imperative mood; try rephrasing
  "D401",
  ## Disable one in each pair of mutually incompatible rules
  # We don't want a blank line before a class docstring
  "D203",
  # We want docstrings to start immediately after the opening triple quote
  "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["I"]
"tests/*" = ["D"]
"*/__init__.py" = ["F401"]
"src/datum_sync/bmi/bmi_base.py" = ["D102"] # missing public docstrings

[tool.mypy]
python_version = "3.11"
warn_return_any = false
disallow_any_unimported = false
warn_unused_configs = true
strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true
